1.5/object/s_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
  - name: multi
    port: 9002
    protocol: TCP
    targetPort: 1180
  selector:
    app: backend
