1.5/object/s_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  ports:
  - name: web
    port: 9001
    protocol: TCP
    targetPort: 80
  selector:
    app: frontend
