1.5/object/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: nginx.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
            path: /
          - pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 1180
            path: /api
